update-tr-locales

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">WG Tunnel</string>
     <string name="vpn_channel_id">VPN Kanalı</string>
@@ -8,38 +7,38 @@
     <string name="github_url" translatable="false">https://github.com/zaneschepke/wgtunnel/issues</string>
     <string name="docs_url" translatable="false">https://zaneschepke.com/wgtunnel-docs/overview.html</string>
     <string name="privacy_policy_url" translatable="false">https://zaneschepke.com/wgtunnel-docs/privacypolicy.html</string>
-    <string name="error_file_extension">Dosya bir .conf veya .zip değil</string>
-    <string name="turn_off_tunnel">Eylem tünelin kapalı olmasını gerektiriyor</string>
-    <string name="no_tunnels">Henüz bir tünel ekli değil!</string>
+    <string name="error_file_extension">Dosya .conf veya .zip değil</string>
+    <string name="turn_off_tunnel">İşlem için tünelin kapalı olması gerekiyor</string>
+    <string name="no_tunnels">Henüz tünel eklenmedi!</string>
     <string name="discord_url" translatable="false">https://discord.gg/rbRRNh6H7V</string>
-    <string name="watcher_notification_text_active">Ağ durumu değişikliklerini izleme: etkin</string>
-    <string name="watcher_notification_text_paused">Ağ durumu değişikliklerini izleme: duraklatıldı</string>
+    <string name="watcher_notification_text_active">Ağ durum değişiklikleri izleniyor: aktif</string>
+    <string name="watcher_notification_text_paused">Ağ durum değişiklikleri izleniyor: duraklatıldı</string>
     <string name="tunnel_start_title">VPN bağlandı</string>
-    <string name="tunnel_start_text">Tünele bağlı</string>
+    <string name="tunnel_start_text">Tünele bağlandı</string>
     <string name="notification_permission_required">Bildirim izni gerekli.</string>
-    <string name="add_trusted_ssid">Güvenilir Wi-Fi adı ekle</string>
+    <string name="add_trusted_ssid">Güvenilir wifi adı ekle</string>
     <string name="tunnels">Tüneller</string>
     <string name="enable_auto_tunnel">Otomatik tünellemeyi başlat</string>
     <string name="disable_auto_tunnel">Otomatik tünellemeyi durdur</string>
-    <string name="tunnel_mobile_data">Mobil veri üzerinde tünel</string>
-    <string name="one_tunnel_required">Bu özelliği kullanabilmek için en az bir tünel gereklidir.</string>
-    <string name="privacy_policy">Gizlilik Politikası</string>
+    <string name="tunnel_mobile_data">Mobil veride tünel</string>
+    <string name="one_tunnel_required">Bu özelliği kullanmak için en az bir tünel gerekli</string>
+    <string name="privacy_policy">Gizlilik Politikasını Görüntüle</string>
     <string name="okay">Tamam</string>
-    <string name="tunnel_on_ethernet">Ethernet üzerinde tünel</string>
-    <string name="prominent_background_location_message">Bu özellik, uygulama kapalıyken bile Wi-Fi SSID izlemesini etkinleştirmek için arka plan konumu izni gerektirir. Daha fazla bilgi için lütfen Destek ekranında bağlantısı verilen Gizlilik Politikasına bakın.</string>
+    <string name="tunnel_on_ethernet">Ethernet\'te tünel</string>
+    <string name="prominent_background_location_message">Bu özellik, uygulama kapalıyken bile Wi-Fi SSID izlemesini etkinleştirmek için arka plan konum iznine ihtiyaç duyar. Daha fazla ayrıntı için lütfen Destek ekranında bağlantısı verilen Gizlilik Politikasına bakın.</string>
     <string name="prominent_background_location_title">Arka Plan Konum Açıklaması</string>
-    <string name="thank_you">WG Tunnel\'i kullandığınız için teşekkür ederiz!</string>
-    <string name="trusted_ssid_empty_description">SSID\'yi gir</string>
+    <string name="thank_you">WG Tunnel\'ı kullandığınız için teşekkürler!</string>
+    <string name="trusted_ssid_empty_description">SSID girin</string>
     <string name="trusted_ssid_value_description">SSID\'yi gönder</string>
-    <string name="add_tunnels_text">Dosyadan veya ZIP\'ten ekle</string>
+    <string name="add_tunnels_text">Dosyadan veya zip\'ten ekle</string>
     <string name="open_file">Dosya Aç</string>
     <string name="add_from_qr">QR kodundan ekle</string>
-    <string name="qr_scan">QR kodu tarat</string>
-    <string name="tunnel_name">Tünel adı</string>
-    <string name="add_tunnel">Tünel ekle</string>
+    <string name="qr_scan">QR Tarama</string>
+    <string name="tunnel_name">Tünel Adı</string>
+    <string name="add_tunnel">Tünel Ekle</string>
     <string name="exclude">Hariç tut</string>
     <string name="include">Dahil et</string>
-    <string name="tunnel_all">Tüm uygulamaları dahil et</string>
+    <string name="tunnel_all">Tüm uygulamaları tünelle</string>
     <string name="config_changes_saved">Yapılandırma değişiklikleri kaydedildi.</string>
     <string name="save_changes">Kaydet</string>
     <string name="icon">Simge</string>
@@ -55,15 +54,15 @@
     <string name="endpoint">Uç nokta (endpoint)</string>
     <string name="name">Ad</string>
     <string name="restart">Tüneli Yeniden Başlat</string>
-    <string name="vpn_connection_failed">Bağlantı kurulamadı</string>
+    <string name="vpn_connection_failed">Bağlantı başarısız</string>
     <string name="always_on_vpn_support">Her Zaman Açık VPN\'e İzin Ver</string>
     <string name="location_services_not_detected">Konum Hizmetleri Algılanmadı</string>
-    <string name="hint_search_packages">Uygulama arayın</string>
-    <string name="attempt_connection">Bağlantı kurulmaya çalışılıyor..</string>
+    <string name="hint_search_packages">Paketlerde ara</string>
+    <string name="attempt_connection">Bağlantı deneniyor..</string>
     <string name="vpn_starting">VPN başlatılıyor</string>
     <string name="db_name">wg-tunnel-db</string>
-    <string name="scanning_qr">QR taranıyor</string>
-    <string name="none">Güvenilir Wi-Fi adı yok</string>
+    <string name="scanning_qr">QR için taranıyor</string>
+    <string name="none">Güvenilir wifi adı yok</string>
     <string name="other">Diğer</string>
     <string name="auto_tunneling">Otomatik tünelleme</string>
     <string name="vpn_on">VPN açık</string>
@@ -71,50 +70,50 @@
     <string name="default_vpn_on">Birincil VPN açık</string>
     <string name="default_vpn_off">Birincil VPN kapalı</string>
     <string name="create_import">Sıfırdan oluştur</string>
-    <string name="turn_off_auto">Eylem, otomatik tünelin devre dışı bırakılmasını veya duraklatılmasını gerektirir</string>
-    <string name="turn_on_tunnel">Eylem aktif tünel gerektirir</string>
-    <string name="add_peer">Eş (peer) ekle</string>
+    <string name="turn_off_auto">İşlem için otomatik tünelin devre dışı veya duraklatılmış olması gerekiyor</string>
+    <string name="turn_on_tunnel">İşlem için aktif tünel gerekiyor</string>
+    <string name="add_peer">Eş ekle</string>
     <string name="done">Tamam</string>
     <string name="interface_">Arayüz</string>
-    <string name="rotate_keys">Tuşları döndür</string>
+    <string name="rotate_keys">Anahtarları döndür</string>
     <string name="private_key">Özel anahtar</string>
     <string name="copy_public_key">Genel anahtarı kopyala</string>
-    <string name="base64_key">Base64 anahtarı</string>
-    <string name="comma_separated_list">Virgül ile ayrılmış liste ekleyin</string>
-    <string name="listen_port">Bağlantı noktası</string>
-    <string name="random">(Rastgele)</string>
-    <string name="optional">(İsteğe bağlı)</string>
-    <string name="optional_no_recommend">(İsteğe bağlı, önerilmez)</string>
-    <string name="preshared_key">Ön paylaşımlı anahtar</string>
+    <string name="base64_key">base64 anahtar</string>
+    <string name="comma_separated_list">virgülle ayrılmış liste</string>
+    <string name="listen_port">Dinleme portu</string>
+    <string name="random">(rastgele)</string>
+    <string name="optional">(isteğe bağlı)</string>
+    <string name="optional_no_recommend">(isteğe bağlı, önerilmez)</string>
+    <string name="preshared_key">Önceden paylaşılmış anahtar</string>
     <string name="seconds">saniye</string>
-    <string name="persistent_keepalive">Kalıcı olarak canlı tutma</string>
+    <string name="persistent_keepalive">Kalıcı canlı tutma</string>
     <string name="cancel">İptal</string>
     <string name="error_authentication_failed">Kimlik doğrulama başarısız oldu</string>
-    <string name="error_authorization_failed">Yetkilendirilemedi</string>
+    <string name="error_authorization_failed">Yetkilendirme başarısız oldu</string>
     <string name="enabled_app_shortcuts">Uygulama kısayollarını etkinleştir</string>
     <string name="export_configs">Yapılandırmaları dışa aktar</string>
-    <string name="location_services_required">Gerekli konum hizmetleri</string>
+    <string name="export_configs_failed">Yapılandırmaları dışa aktarma başarısız oldu</string>
+    <string name="location_services_required">Konum hizmetleri gerekli</string>
     <string name="background_location_required">Arka plan konumu gerekli</string>
-    <string name="precise_location_required">Kesin konum gerekli</string>
+    <string name="precise_location_required">Hassas konum gerekli</string>
     <string name="unknown_error">Bilinmeyen bir hata oluştu</string>
-    <string name="exported_configs_message">Yapılandırmalar indirilenler\'e aktarıldı</string>
-    <string name="tunnel_on_wifi">Güvenilmeyen kablosuz internet bağlantısında tünel</string>
+    <string name="exported_configs_message">Yapılandırmalar indirilenler klasörüne aktarıldı</string>
+    <string name="tunnel_on_wifi">Güvenilmeyen wifi\'da tünel</string>
     <string name="my_email" translatable="false">support@zaneschepke.com</string>
     <string name="email_subject">WG Tunnel Desteği</string>
-    <string name="email_chooser">Bir e-posta gönderin…</string>
+    <string name="email_chooser">E-posta gönder…</string>
     <string name="go">git</string>
     <string name="docs_description">Belgeleri oku</string>
     <string name="discord_description">Topluluğa katıl</string>
     <string name="email_description">Bana e-posta gönder</string>
-    <string name="support_help_text">Sorun yaşıyorsanız, iyileştirme fikirleriniz varsa veya sadece etkileşimde bulunmak istiyorsanız, aşağıdaki kaynaklar mevcuttur:</string>
-    <string name="kernel">Çekirdek</string>
-    <string name="use_kernel">Çekirdek modülünü kullan</string>
-    <string name="error_ssid_exists">SSID zaten var</string>
-    <string name="error_root_denied">Kök kabuğu reddedildi</string>
-    <string name="error_no_file_explorer">Yüklü dosya gezgini yok</string>
+    <string name="support_help_text">Sorun yaşıyorsanız, iyileştirme fikirleriniz varsa veya sadece iletişime geçmek istiyorsanız, aşağıdaki kaynaklar mevcuttur:</string>
+    <string name="use_kernel">Kernel modülünü kullan</string>
+    <string name="error_ssid_exists">SSID zaten mevcut</string>
+    <string name="error_root_denied">Root kabuğu reddedildi</string>
+    <string name="error_no_file_explorer">Dosya gezgini yüklü değil</string>
     <string name="error_invalid_code">Geçersiz QR kodu</string>
     <string name="error_none">Hata yok</string>
-    <string name="location_services_missing_message">Uygulama, cihazınızda etkinleştirilen herhangi bir konum hizmeti algılamıyor. Cihaza bağlı olarak bu, güvenilmeyen Wi-Fi özelliğinin Wi-Fi adını okuyamamasına neden olabilir. Yine de devam etmek ister misiniz?</string>
+    <string name="location_services_missing_message">Uygulama, cihazınızda etkinleştirilmiş herhangi bir konum hizmeti algılamıyor. Cihaza bağlı olarak, bu durum güvenilmeyen wifi özelliğinin wifi adını okumasını engelleyebilir. Yine de devam etmek istiyor musunuz?</string>
     <string name="auto_tunnel_title">Otomatik Tünel Hizmeti</string>
     <string name="delete_tunnel">Tüneli sil</string>
     <string name="delete_tunnel_message">Bu tüneli silmek istediğinizden emin misiniz?</string>
@@ -124,37 +123,58 @@
     <string name="paused">duraklatıldı</string>
     <string name="active">aktif</string>
     <string name="tunneling_apps">Tünellenen uygulamalar</string>
-    <string name="included">dahil edildi</string>
-    <string name="excluded">hariç tutuldu</string>
+    <string name="included">dahil</string>
+    <string name="excluded">hariç</string>
     <string name="all">tümü</string>
-    <string name="always_on_disabled">Her zaman açık VPN bir tünel başlatmaya çalıştı, ancak bu özellik ayarlarda devre dışı bırakıldı.</string>
+    <string name="always_on_disabled">Her Zaman Açık VPN bir tüneli başlatmaya çalıştı, ancak bu özellik ayarlarda devre dışı bırakılmış.</string>
     <string name="no_email_detected">E-posta uygulaması algılanmadı</string>
     <string name="no_browser_detected">Tarayıcı algılanmadı</string>
-    <string name="logs_saved">İndirilenlere kaydedilen günlükler</string>
-    <string name="open_issue">Bir sorun bildir</string>
+    <string name="logs_saved">Günlükler indirilenler klasörüne kaydedildi</string>
+    <string name="open_issue">Sorun bildir</string>
     <string name="read_logs">Günlükleri oku</string>
-    <string name="auto">(Otomatik)</string>
-    <string name="config_parse_error">Yapılandırma kaydedilemedi</string>
-    <string name="incorrect_pin">PIN kodu yanlış</string>
-    <string name="pin_created">Pin başarıyla oluşturuldu</string>
-    <string name="enter_pin">PIN kodunuzu girin</string>
-    <string name="create_pin">PIN kodu oluştur</string>
+    <string name="auto">(otomatik)</string>
+    <string name="config_parse_error">Yapılandırma ayrıştırılamadı</string>
+    <string name="incorrect_pin">PIN yanlış</string>
+    <string name="pin_created">PIN başarıyla oluşturuldu</string>
+    <string name="enter_pin">PIN\'inizi girin</string>
+    <string name="create_pin">PIN oluştur</string>
     <string name="enable_app_lock">Uygulama kilidini etkinleştir</string>
     <string name="restart_on_ping">Ping başarısız olduğunda yeniden başlat (beta)</string>
     <string name="mobile_data_tunnel">Mobil veri tüneli olarak ayarla</string>
     <string name="set_primary_tunnel">Birincil tünel olarak ayarla</string>
-    <string name="use_tunnel_on_wifi_name">Wi-Fi adında tünel kullan</string>
-    <string name="no_wifi_names_configured">Bu tünel için yapılandırılmış Wi-Fi adı yok</string>
+    <string name="use_tunnel_on_wifi_name">Wifi adında tünel kullan</string>
+    <string name="no_wifi_names_configured">Bu tünel için yapılandırılmış wifi adı yok</string>
     <string name="general">Genel</string>
     <string name="edit_tunnel">Tüneli düzenle</string>
-    <string name="disabled">Devre dışı</string>
-    <string name="auto_on">Otomatik ayarlamayı sürdür</string>
-    <string name="auto_off">Otomatik ayarlamayı duraklat</string>
-    <string name="auto_tun_on">Otomatik tüneli sürdür</string>
+    <string name="disabled">devre dışı</string>
+    <string name="auto_on">Otomatik tüneli devam ettir</string>
+    <string name="auto_off">Otomatik tüneli duraklat</string>
+    <string name="auto_tun_on">Otomatik tüneli devam ettir</string>
     <string name="auto_tun_off">Otomatik tüneli duraklat</string>
     <string name="version">Sürüm</string>
     <string name="mode">Mod</string>
     <string name="userspace">Kullanıcı alanı</string>
     <string name="settings">Ayarlar</string>
     <string name="support">Destek</string>
+    <string name="backend">Arka uç</string>
+    <string name="kernel">Çekirdek</string>
+    <string name="use_amnezia">"Amnezia kullanıcı alanını kullan "</string>
+    <string name="junk_packet_count">Gereksiz paket sayısı</string>
+    <string name="junk_packet_minimum_size">Gereksiz paket minimum boyutu</string>
+    <string name="junk_packet_maximum_size">Gereksiz paket maksimum boyutu</string>
+    <string name="init_packet_junk_size">Başlatma paketi gereksiz boyutu</string>
+    <string name="response_packet_junk_size">Yanıt paketi gereksiz boyutu</string>
+    <string name="init_packet_magic_header">Başlatma paketi sihirli başlığı</string>
+    <string name="response_packet_magic_header">Yanıt paketi sihirli başlığı</string>
+    <string name="transport_packet_magic_header">Taşıma paketi sihirli başlığı</string>
+    <string name="underload_packet_magic_header">Düşük yük paketi sihirli başlığı</string>
+    <string name="telegram_url" translatable="false">https://t.me/wgtunnel</string>
+    <string name="unsure_how">nasıl devam edeceğinizden emin değilseniz</string>
+    <string name="see_the">Bakın:</string>
+    <string name="getting_started_url" translatable="false">https://zaneschepke.com/wgtunnel-docs/getting-started.html</string>
+    <string name="getting_started_guide">başlangıç kılavuzu</string>
+    <string name="amnezia" translatable="false">Amnezia</string>
+    <string name="wireguard" translatable="false">WireGuard</string>
+    <string name="error_file_format">Geçersiz tünel yapılandırma formatı</string>
+    <string name="restart_at_boot">Önyüklemede yeniden başlat</string>
 </resources>
