feat: add pre/post script support for rooted
Adds pre/post script support for wireguard configs for rooted devices working for both kernel, userspace, and amnezia userspace.

Fixes issues with kernel model state not saved in app.

Fixes issue with quick tile sync with app.

Removes requesting vpn tun permission if using kernel mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,4 +181,5 @@
 	<string name="always_on_message2">to make sure Always-on VPN is turned off for all other apps and try again</string>
 	<string name="chat_description">Join the community</string>
 	<string name="tunnel_required">Feature requires at least one tunnel</string>
+    <string name="request_root">Request root</string>
 </resources>
