--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,4 +196,7 @@
     <string name="wildcard_supported">Learn about supported wildcards.</string>
 	<string name="details">details</string>
 	<string name="show_amnezia_properties">Show Amnezia properties</string>
+	<string name="never">never</string>
+	<string name="sec">sec</string>
+	<string name="handshake">handshake</string>
 </resources>
