feat: user logger toggle control
Allow users to toggle on and off local logger. This will hopefully help address #437
Allow shortcuts activation on AndroidTV
closes #451

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,4 +229,8 @@
     <string name="tunnel_running">Tunnel running</string>
 	<string name="monitoring_state_changes">Monitoring state changes</string>
 	<string name="donate">Donate to project</string>
+	<string name="local_logging">Local logging</string>
+	<string name="enable_local_logging">Enable local logging</string>
+	<string name="configuration_change">Configuration change</string>
+	<string name="requires_app_relaunch">This change requires an app relaunch. Would you like to proceed?</string>
 </resources>
